# spacecraft-dynamics-simulator

./: CMakeLists.txt  LICENSE  README.md
DevLogs/: DevLog1.md
include/: gravitational_object.hpp  main.hpp  physics.hpp  spaceship.hpp  vector3.hpp
src/: main.cpp  physics.cpp  spaceship.cpp
